--- a/main.css
+++ b/main.css
@@ -1,15 +1,20 @@
 body {
-    
+    background-color: #EAEBED;
 }
 
 main {
-
+    background-color: red;
+    width: 50%;
+    margin-top: 40px;
+    margin-left: 25%;
 }
     img {
-
+        background-color: blueviolet;
     }
     div {
-
+        background-color: orange;
+        width: 50%;
+        display: inline-block;
     }
         h1 {
 
