--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body {
 main {
     display: inline-block;
     width: 50%;
-    margin-top: 40px;
+    margin-top: 140px;
     margin-left: 25%;
 }
     img {
@@ -19,16 +19,21 @@ main {
         width: 50%;
         float: right;
         text-align: center;
+        margin-top: 30px;
     }
         h1 {
             display: inline-block;
             width: 100%;
             font-size: 80px;
+            margin: 0;
+            margin-bottom: 20px;
         }
         p {
             display: inline-block;
             width: 100%;
             font-size: 30px;
+            margin: 0;
+            margin-bottom: 20px;
         }
         a {
             display: inline-block;
@@ -41,6 +46,7 @@ main {
             padding-right: 20px;
             text-decoration: none;
             text-transform: uppercase;
+            border-radius: 2px;
         }
 
 
